# emo

./: .gitignore  Architecture.md  README.md  pyproject.toml  requirements.txt  run_gui.bat  setup.bat  setup.sh
.github/workflows/: ci.yml
data/: public_datasets_manifest.md
docs/: ADVANCED_TRAINING_GUIDE.md  Evaluation.md  PROJECT_DETAILED_BREAKDOWN.md  Training.md  data_collection.md
examples/: demo_input.json
experiments/example_face_baseline/: checkpoint.json
notebooks/: README.md
reports/: slides.pptx
src/: __init__.py  audio_pipeline.py  face_detector.py  face_preprocess.py  face_tracker.py  fusion_engine.py  speech_to_text.py  text_toxicity.py  ui_app.py  video_capture.py  voice_emotion.py
src/face_model/: __init__.py  inference_face_emotion.py  train_face_emotion.py
src/utils/: __init__.py  schemas.py
tests/: test_audio_pipeline.py  test_face_detector.py  test_face_emotion_inference.py  test_fusion_engine.py  test_speech_to_text.py  test_text_toxicity.py  test_ui_app.py  test_video_capture.py
