[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-ai-system"
version = "0.1.0"
description = "Local-first multimodal emotion recognition MVP scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Digital Solutions MVP"}
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
